// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextButton renders as expected if full width 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--block"
  onClick={[Function]}
  type="button"
>
  
  Test Text fullWidth Button
</button>
`;

exports[`TextButton renders as expected when passing a dark skin 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal lab-btn--dark"
  onClick={[Function]}
  type="button"
>
  
  Test Text Dark Button
</button>
`;

exports[`TextButton renders as expected when passing a plus icon 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--Add lab-icon--white lab-btn__icon"
  >
    <svg
      aria-hidden={true}
      className="___12fm75w_v8ls9a0 f1w7gpdv fez10in fg4l7m0"
      fill="currentColor"
      height={20}
      viewBox="0 0 20 20"
      width={20}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M10 2.5a.5.5 0 0 0-1 0V9H2.5a.5.5 0 0 0 0 1H9v6.5a.5.5 0 0 0 1 0V10h6.5a.5.5 0 0 0 0-1H10V2.5Z"
        fill="currentColor"
      />
    </svg>
  </span>
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing a small size 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--small"
  onClick={[Function]}
  type="button"
>
  
  Test Text Small Button
</button>
`;

exports[`TextButton renders as expected when passing disabled as true 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Text Disabled Button 1
</button>
`;

exports[`TextButton renders as expected when tabIndex is passed 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal"
  onClick={[Function]}
  tabIndex={1}
  type="button"
>
  
  Test tabIndex
</button>
`;

exports[`TextButton renders with base props 1`] = `
<button
  className="lab-btn lab-btn--text lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Text Button
</button>
`;
